tests/fixtures/invalid/pow_list_int_dict.py
# Cannot call pow() with List[int], Int, Dict[str, int]
x = pow([1, 2, 3], 1, {"a": 1})
